# learning-opengl

./: Cargo.toml
src/: main.rs
src/1_getting_started/: 2_1_hello_triangle.rs  2_2_hello_triangle_with_indices.rs  2_3_exercises_hello_triangle.rs  2_4_exercises_hello_triangle.rs  3_1_shader.rs
